# xdirga-metascan-v4

./: .gitignore  .prettierignore  package.json  vite.config.ts
backend/: .env.example  SP1_SUMMARY.md  SP2_DESIGN.md  SP2_PLAN.md  SP2_SUMMARY.md  SP3_DESIGN.md  SP3_PLAN.md  SP3_SUMMARY.md  SP4_DESIGN.md  SP4_PLAN.md  SP4_SUMMARY.md  SP5_DESIGN.md  SP5_PLAN.md  SP5_SUMMARY.md  config.toml  pyproject.toml
backend/src/metascan/: config.py
backend/src/metascan/bus/: __init__.py  event_bus.py
backend/tests/: conftest.py  helpers.py  test_command_tx.py  test_commit_before_publish.py  test_config.py  test_enums.py  test_event_bus_order.py  test_event_bus_overflow.py  test_journal_crash.py  test_journal_triggers.py  test_models_wire.py  test_mt5_asyncio_nonblocking.py  test_mt5_boot_verify.py  test_mt5_connection_state.py  test_mt5_dashboard_state.py  test_mt5_deal_reconciliation.py  test_mt5_diff_positions.py  test_mt5_external_close.py  test_mt5_external_modify.py  test_mt5_external_partial.py  test_mt5_fake_scriptable.py  test_mt5_foreign_magic.py  test_mt5_frame_handoff.py  test_mt5_gateway_thread.py  test_mt5_lifecycle.py  test_mt5_metrics_clocks.py  test_mt5_mutation_seam.py  test_mt5_none_errors.py  test_mt5_symbols.py  test_pipeline_internal_resilience.py  test_replay.py  test_schema_hash.py  test_secrets.py  test_sp5_a7_gate_reasons.py  test_sp5_behavioral_e2e.py  test_sp5_bulk_emergency.py  test_sp5_contract.py  test_sp5_durable_entry_intent.py  test_sp5_emergency_contract.py  test_sp5_entry_intent.py  (+31 more)
backend/tests/crash_helpers/: interrupt_insert.py
backend/tests/test_web/: conftest.py  test_api_commands.py  test_api_handshake.py  test_api_health.py  test_api_journal.py  test_api_lifecycle.py  test_api_sse.py  test_sp4_quality.py  test_sp5_transport_isolation.py  test_truthful_snapshot.py
(+152 files in other folders)
