[project]
name = "metascan"
version = "0.1.0"
description = "XDirga Runtime V4 backend"
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metascan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true
