[project]
name = "metascan"
version = "0.1.0"
description = "XDirga Runtime V4 backend"
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.13.4",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metascan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
package = true
